          directory to keys/ under that directory, unless --keydir is also
          given. This is a bugfix.

        - Fixed a regression in 0.35 that resulted in some databases
          becoming significantly larger when storing new revisions. Existing
          databases with this problem can be fixed by pulling into a fresh
          database using 0.36.

        - Monotone can now be built successfully with Boost 1.34. Older
          versions of monotone would sometimes seem to work depending on
          the compiler used, but would have bugs in path normalization.

        Internal

        - Commands are now defined as a tree of commands instead of a
          plain list, which allows the help system to look up information
          of a command at an level in the tree.

        - The command class, the automate class and all the associated
          macros have been cleaned up.



Mon May  7 14:08:44 UTC 2007

        0.35 release.

        Changes

        - 'mkdir --no-respect-ignore PATH' now really skips any
          ignore directives from .mtn-ignore or Lua hooks

        - Private keys are now stored more safely, using file
          permissions.

        - The editable log summary (what you get in an editor when
          committing without -m) now includes information about which
          branch the commit applies to.

        - The status command and the editable log summary now show
          the same details about the change.

        New features

        - 'automate identify', an automate version of 'mtn identify'.

        - 'automate roots', prints the roots of the revision graph,
          i.e. all revisions that have no parents.

        Other

        - You can't drop the workspace root any more.

        Internal

        - Update the internal Lua to version 5.1.2.

        - Added build files for Mac OS X.

        - Update the internal SQLite to version 3.3.17.

        - Code cleanup of app_state.



Sun Apr  1 08:23:34 UTC 2007
