@@ -9,28 +9,17 @@
 
 #include "base.hh"
 #include <sstream>
+#include <boost/algorithm/string/join.hpp>
 
-#include <boost/version.hpp>
-#include <boost/filesystem/path.hpp>
-#include <boost/filesystem/operations.hpp>
-#include <boost/filesystem/convenience.hpp>
-
-namespace fs = boost::filesystem;
-
-#include "constants.hh"
 #include "paths.hh"
-#include "platform-wrapped.hh"
-#include "sanity.hh"
-#include "interner.hh"
+#include "file_io.hh"
 #include "charset.hh"
-#include "simplestring_xform.hh"
 
 using std::exception;
 using std::ostream;
 using std::ostringstream;
 using std::string;
 using std::vector;
-
 
 // some structure to ensure we aren't doing anything broken when resolving
 // filenames.  the idea is to make sure
@@ -82,29 +71,23 @@ struct access_tracker
 // initial_abs_path is for interpreting relative system_path's
 static access_tracker<system_path> initial_abs_path;
 // initial_rel_path is for interpreting external file_path's
-// for now we just make it an fs::path for convenience; we used to make it a
-// file_path, but then you can't run monotone from inside the _MTN/ dir (even
-// when referring to files outside the _MTN/ dir).
-static access_tracker<fs::path> initial_rel_path;
+// we used to make it a file_path, but then you can't run monotone from
+// inside the _MTN/ dir (even when referring to files outside the _MTN/
+// dir).  use of a bare string requires some caution but does work.
+static access_tracker<string> initial_rel_path;
 // working_root is for converting file_path's and bookkeeping_path's to
 // system_path's.
 static access_tracker<system_path> working_root;
 
 bookkeeping_path const bookkeeping_root("_MTN");
 path_component const bookkeeping_root_component("_MTN");
-
-// this is a file_path because it does not conform to the invariant that
-// bookkeeping paths always start with the _current_ bookkeeping root.
-file_path const old_bookkeeping_root = file_path_internal("MT");
+path_component const old_bookkeeping_root_component("MT");
 
 void
 save_initial_path()
 {
   // FIXME: BUG: this only works if the current working dir is in utf8
   initial_abs_path.set(system_path(get_current_working_dir()), false);
-  // We still use boost::fs, so let's continue to initialize it properly.
-  fs::initial_path();
-  fs::path::default_name_check(fs::native);
   L(FL("initial abs path is: %s") % initial_abs_path.get_but_unused());
 }
 
@@ -129,6 +112,7 @@ save_initial_path()
 //  -- no doubled /'s
 //  -- no trailing /
 //  -- no "." or ".." path components
+
 static inline bool
 bad_component(string const & component)
 {
@@ -173,6 +157,36 @@ has_bad_component_chars(string const & pc)
     }
   return false;
   
+}
+
+static bool
+is_absolute_here(string const & path)
+{
+  if (path.empty())
+    return false;
+  if (path[0] == '/')
+    return true;
+#ifdef WIN32
+  if (path[0] == '\\')
+    return true;
+  if (path.size() > 1 && path[1] == ':')
+    return true;
+#endif
+  return false;
+}
+
+static inline bool
+is_absolute_somewhere(string const & path)
+{
+  if (path.empty())
+    return false;
+  if (path[0] == '/')
+    return true;
+  if (path[0] == '\\')
+    return true;
+  if (path.size() > 1 && path[1] == ':')
+    return true;
+  return false;
 }
 
 // fully_normalized_path verifies a complete pathname for validity and
@@ -240,39 +254,86 @@ is_valid_internal(string const & path)
           && !in_bookkeeping_dir(path));
 }
 
-// path::normalize() is deprecated in Boost 1.34, and also
-// doesn't remove leading or trailing dots any more.
-static fs::path
-normalize_path(fs::path const & in)
+static string
+normalize_path(string const & in)
 {
-#if BOOST_VERSION < 103400
-  return fs::path(in).normalize();
-#else
-  fs::path out;
-  vector<string> stack;
-  for (fs::path::iterator i = in.begin(); i != in.end(); ++i)
+  string inT = in;
+  string leader;
+  MM(inT);
+
+#ifdef WIN32
+  // the first thing we do is kill all the backslashes
+  for (string::iterator i = inT.begin(); i != inT.end(); i++)
+    if (*i == '\\')
+      *i = '/';
+#endif
+
+  if (is_absolute_here (inT))
     {
-      // remove . elements
-      if (*i == ".")
-        continue;
-      // remove foo/.. element pairs
-      if (*i == "..")
+      if (inT[0] == '/')
         {
-          if (!stack.empty())
+          leader = "/";
+          inT = inT.substr(1);
+
+          if (inT.size() > 0 && inT[0] == '/')
             {
-              stack.pop_back();
-              continue;
+              // if there are exactly two slashes at the beginning they
+              // are both preserved.  three or more are the same as one.
+              string::size_type f = inT.find_first_not_of("/");
+              if (f == string::npos)
+                f = inT.size();
+              if (f == 1)
+                leader = "//";
+              inT = inT.substr(f);
             }
         }
-      stack.push_back(*i);
-    }
-  for (vector<string>::const_iterator i = stack.begin();
-       i != stack.end(); ++i)
-    {
-      out /= *i;
-    }
-  return out;
+#ifdef WIN32
+      else
+        {
+          I(inT[1] == ':');
+          if (inT.size() > 2 && inT[2] == '/')
+            {
+              leader = inT.substr(0, 3);
+              inT = inT.substr(3);
+            }
+          else
+            {
+              leader = inT.substr(0, 2);
+              inT = inT.substr(2);
+            }
+        }
 #endif
+      
+      I(!is_absolute_here(inT));
+      if (inT.size() == 0)
+        return leader;
+    }
+
+  vector<string> stack;
+  string::const_iterator head, tail;
+  for (head = inT.begin(); head != inT.end(); head = tail)
+    {
+      tail = head;
+      while (tail != inT.end() && *tail != '/')
+        tail++;
+
+      string elt(head, tail);
+      if (tail != inT.end())
+        tail++;
+
+      if (elt == ".")
+        continue;
+      // remove foo/.. element pairs; leave leading .. components alone
+      if (elt == ".." && !stack.empty() && stack.back() != "..")
+        {
+          stack.pop_back();
+          continue;
+        }
+
+      stack.push_back(elt);
+    }
+
+  return leader + boost::algorithm::join(stack, "/");
 }
 
 static void
@@ -292,24 +353,24 @@ normalize_external_path(string const & path, string & normalized)
   else
     {
       N(!path.empty(), F("empty path '%s' is invalid") % path);
-      fs::path out, base, relative;
+      N(!is_absolute_here(path), F("absolute path '%s' is invalid") % path);
+      string base;
       try
         {
           base = initial_rel_path.get();
-          // the fs::native is needed to get it to accept paths like ".foo".
-          relative = fs::path(path, fs::native);
-          out = normalize_path(base / relative);
+          if (base == "")
+            normalized = normalize_path(path);
+          else
+            normalized = normalize_path(base + "/" + path);
         }
       catch (exception &)
         {
           N(false, F("path '%s' is invalid") % path);
         }
-      normalized = out.string();
       if (normalized == ".")
         normalized = string("");
-      N(!relative.has_root_path(),
-        F("absolute path '%s' is invalid") % relative.string());
-      N(fully_normalized_path(normalized), F("path '%s' is invalid") % normalized);
+      N(fully_normalized_path(normalized),
+        F("path '%s' is invalid") % normalized);
     }
 }
 
@@ -454,11 +515,8 @@ any_path::dirname() const
   return any_path(s, 0, sep);
 }
 
-// this returns all but the last component of a file_path.  it is only
-// defined on file_paths because (a) that avoids problems at the root,
-// and (b) that's the only version that we use.
-// if there is only one component present, the dirname is the root
-// (i.e. the empty string).
+// these variations exist to get the return type right.  also,
+// file_path dirname() can be a little simpler.
 file_path
 file_path::dirname() const
 {
@@ -468,6 +526,20 @@ file_path::dirname() const
     return file_path();
   return file_path(s, 0, sep);
 }
+
+system_path
+system_path::dirname() const
+{
+  string const & s = data;
+  string::size_type sep = s.rfind('/');
+  if (sep == string::npos)
+    return system_path();
+  if (sep == s.size() - 1) // dirname() of the root directory is itself
+    return *this;
+
+  return system_path(s, 0, sep);
+}
+
 
 // produce dirname and basename at the same time
 void
@@ -565,36 +637,6 @@ void dump(bookkeeping_path const & p, string & out)
 // this code's speed does not matter much
 ///////////////////////////////////////////////////////////////////////////
 
-static bool
-is_absolute_here(string const & path)
-{
-  if (path.empty())
-    return false;
-  if (path[0] == '/')
-    return true;
-#ifdef WIN32
-  if (path[0] == '\\')
-    return true;
-  if (path.size() > 1 && path[1] == ':')
-    return true;
-#endif
-  return false;
-}
-
-static inline bool
-is_absolute_somewhere(string const & path)
-{
-  if (path.empty())
-    return false;
-  if (path[0] == '/')
-    return true;
-  if (path[0] == '\\')
-    return true;
-  if (path.size() > 1 && path[1] == ':')
-    return true;
-  return false;
-}
-
 // relies on its arguments already being validated, except that you may not
 // append the empty path component, and if you are appending to the empty
 // path, you may not create an absolute path or a path into the bookkeeping
@@ -668,22 +710,12 @@ system_path::operator /(char const * to_append) const
 // system_path
 ///////////////////////////////////////////////////////////////////////////
 
-static string
-normalize_out_dots(string const & path)
-{
-#ifdef WIN32
-  return normalize_path(fs::path(path, fs::native)).string();
-#else
-  return normalize_path(fs::path(path, fs::native)).native_file_string();
-#endif
-}
-
 system_path::system_path(any_path const & other, bool in_true_workspace)
 {
   if (is_absolute_here(other.as_internal()))
     // another system_path.  the normalizing isn't really necessary, but it
     // makes me feel warm and fuzzy.
-    data = normalize_out_dots(other.as_internal());
+    data = normalize_path(other.as_internal());
   else
     {
       system_path wr;
@@ -691,7 +723,7 @@ system_path::system_path(any_path const & other, bool in_true_workspace)
         wr = working_root.get();
       else
         wr = working_root.get_but_unused();
-      data = normalize_out_dots(wr.as_internal() + "/" + other.as_internal());
+      data = normalize_path(wr.as_internal() + "/" + other.as_internal());
     }
 }
 
@@ -700,10 +732,10 @@ static inline string const_system_path(utf8 const & path)
   N(!path().empty(), F("invalid path ''"));
   string expanded = tilde_expand(path());
   if (is_absolute_here(expanded))
-    return normalize_out_dots(expanded);
+    return normalize_path(expanded);
   else
-    return normalize_out_dots(initial_abs_path.get().as_internal()
-                              + "/" + path());
+    return normalize_path(initial_abs_path.get().as_internal()
+                          + "/" + path());
 }
 
 system_path::system_path(string const & path)
@@ -721,76 +753,77 @@ system_path::system_path(utf8 const & path)
 ///////////////////////////////////////////////////////////////////////////
 
 static bool
-find_bookdir(fs::path const & root, fs::path const & bookdir, 
-             fs::path & current, fs::path & removed)
+find_bookdir(system_path const & root, path_component const & bookdir,
+             system_path & current, string & removed)
 {
-  current = fs::initial_path();
-  fs::path check = current / bookdir;
+  current = initial_abs_path.get();
+  removed.clear();
 
   // check that the current directory is below the specified search root
-
-  fs::path::iterator ri = root.begin();
-  fs::path::iterator ci = current.begin();
-
-  while (ri != root.end() && ci != current.end() && *ri == *ci)
+  if (current.as_internal().find(root.as_internal()) != 0)
     {
-      ++ri;
-      ++ci;
-    }
-
-  // if it's not then issue a warning and abort the search
-
-  if (ri != root.end())
-    {
-      W(F("current directory '%s' is not below root '%s'")
-        % current.string()
-        % root.string());
+      W(F("current directory '%s' is not below root '%s'") % current % root);
       return false;
     }
 
-  L(FL("searching for '%s' directory with root '%s'")
-    % bookdir.string()
-    % root.string());
+  L(FL("searching for '%s' directory with root '%s'") % bookdir % root);
 
-  while (current != root
-         && current.has_branch_path()
-         && current.has_leaf()
-         && !fs::exists(check))
+  system_path check;
+  while (!(current == root))
     {
-      L(FL("'%s' not found in '%s' with '%s' removed")
-        % bookdir.string() % current.string() % removed.string());
-      removed = fs::path(current.leaf(), fs::native) / removed;
-      current = current.branch_path();
       check = current / bookdir;
+      switch (get_path_status(check))
+        {
+        case path::nonexistent:
+          L(FL("'%s' not found in '%s' with '%s' removed")
+            % bookdir % current % removed);
+          if (removed.empty())
+            removed = current.basename()();
+          else
+            removed = current.basename()() + "/" + removed;
+          current = current.dirname();
+          continue;
+
+        case path::file:
+          L(FL("'%s' is not a directory") % check);
+          return false;
+
+        case path::directory:
+          goto found;
+        }
     }
 
-  L(FL("search for '%s' ended at '%s' with '%s' removed")
-    % bookdir.string() % current.string() % removed.string());
-
-  if (!fs::exists(check))
+  // if we get here, we have hit the root; try once more
+  check = current / bookdir;
+  switch (get_path_status(check))
     {
-      L(FL("'%s' does not exist") % check.string());
+    case path::nonexistent:
+      L(FL("'%s' not found in '%s' with '%s' removed")
+        % bookdir % current % removed);
       return false;
-    }
 
-  if (!fs::is_directory(check))
-    {
-      L(FL("'%s' is not a directory") % check.string());
+    case path::file:
+      L(FL("'%s' is not a directory") % check);
       return false;
-    }
 
+    case path::directory:
+      goto found;
+    }
+  return false;
+    
+ found:
   // check for _MTN/. and _MTN/.. to see if mt dir is readable
   try
     {
-      if (!fs::exists(check / ".") || !fs::exists(check / ".."))
+      if (!path_exists(check / ".") || !path_exists(check / ".."))
         {
-          L(FL("problems with '%s' (missing '.' or '..')") % check.string());
+          L(FL("problems with '%s' (missing '.' or '..')") % check);
           return false;
         }
     }
   catch(exception &)
     {
-      L(FL("problems with '%s' (cannot check for '.' or '..')") % check.string());
+      L(FL("problems with '%s' (cannot check for '.' or '..')") % check);
       return false;
     }
   return true;
@@ -798,38 +831,60 @@ find_bookdir(fs::path const & root, fs::path const & bookdir,
 
 
 bool
-find_and_go_to_workspace(std::string const & search_root)
+find_and_go_to_workspace(string const & search_root)
 {
-  fs::path bookdir(bookkeeping_root.as_external(), fs::native);
-  fs::path oldbookdir(old_bookkeeping_root.as_external(), fs::native);
-  fs::path root, current, removed;
+  system_path root, current;
+  string removed;
 
   if (search_root.empty())
-    root = fs::initial_path().root_path();
+    {
+#ifdef WIN32
+      current = get_current_working_dir();
+      if (current[0] == '/' || current[0] == '\\')
+        {
+          if (current.size() > 1 && (current[1] == '/' || current[1] == '\\'))
+            {
+              // UNC name
+              string::size_type uncend = current.find_first_of("\\/", 2);
+              if (uncend == string::npos)
+                root = system_path(current + "/");
+              else
+                root = system_path(current.substr(0, uncend));
+            }
+          else
+            root = system_path("/");
+        }
+      else if (current.size() > 1 && current[1] == ':')
+        {
+          root = system_path(current.substr(0,2) + "/");
+        }
+      else I(false);
+#else
+      root = system_path("/");
+#endif
+    }
   else
     {
-      L(FL("limiting search for workspace to %s") % search_root);
-      // converting through system_path makes it absolute
-      root = fs::path(system_path(search_root).as_external(), fs::native);
+      root = system_path(search_root);
+      L(FL("limiting search for workspace to %s") % root);
 
-      N(fs::exists(root),
-        F("search root '%s' does not exist") % search_root);
-      N(fs::is_directory(root),
-         F("search root '%s' is not a directory") % search_root);
+      require_path_is_directory(root,
+                               F("search root '%s' does not exist") % root,
+                               F("search root '%s' is not a directory") % root);
     }
   
   // first look for the current name of the bookkeeping directory.
   // if we don't find it, look for it under the old name, so that
   // migration has a chance to work.
-  if (!find_bookdir(root, bookdir, current, removed))
-    if (!find_bookdir(root, oldbookdir, current, removed))
+  if (!find_bookdir(root, bookkeeping_root_component, current, removed))
+    if (!find_bookdir(root, old_bookkeeping_root_component, current, removed))
       return false;
 
-  working_root.set(current.native_file_string(), true);
+  working_root.set(current, true);
   initial_rel_path.set(removed, true);
 
   L(FL("working root is '%s'") % working_root.get_but_unused());
-  L(FL("initial relative path is '%s'") % initial_rel_path.get_but_unused().string());
+  L(FL("initial relative path is '%s'") % initial_rel_path.get_but_unused());
 
   change_current_working_dir(working_root.get_but_unused());
 
@@ -840,7 +895,7 @@ void
 go_to_workspace(system_path const & new_workspace)
 {
   working_root.set(new_workspace, true);
-  initial_rel_path.set(fs::path(), true);
+  initial_rel_path.set(string(), true);
   change_current_working_dir(new_workspace);
 }
 
@@ -936,13 +991,13 @@ UNIT_TEST(paths, file_path_internal)
                             "_mTN/foo",
                             0 };
   initial_rel_path.unset();
-  initial_rel_path.set(fs::path(), true);
+  initial_rel_path.set(string(), true);
   for (char const ** c = baddies; *c; ++c)
     {
       UNIT_TEST_CHECK_THROW(file_path_internal(*c), logic_error);
     }
   initial_rel_path.unset();
-  initial_rel_path.set(fs::path("blah/blah/blah", fs::native), true);
+  initial_rel_path.set("blah/blah/blah", true);
   for (char const ** c = baddies; *c; ++c)
     {
       UNIT_TEST_CHECK_THROW(file_path_internal(*c), logic_error);
@@ -968,8 +1023,8 @@ UNIT_TEST(paths, file_path_internal)
   for (int i = 0; i < 2; ++i)
     {
       initial_rel_path.unset();
-      initial_rel_path.set(i ? fs::path()
-                             : fs::path("blah/blah/blah", fs::native),
+      initial_rel_path.set(i ? string()
+                             : string("blah/blah/blah"),
                            true);
       for (char const ** c = goodies; *c; ++c)
         {
@@ -997,7 +1052,7 @@ static void check_fp_normalizes_to(char * before, char * after)
 UNIT_TEST(paths, file_path_external_null_prefix)
 {
   initial_rel_path.unset();
-  initial_rel_path.set(fs::path(), true);
+  initial_rel_path.set(string(), true);
 
   char const * baddies[] = {"/foo",
                             "../bar",
@@ -1066,7 +1121,7 @@ UNIT_TEST(paths, file_path_external_null_prefix)
 UNIT_TEST(paths, file_path_external_prefix__MTN)
 {
   initial_rel_path.unset();
-  initial_rel_path.set(fs::path("_MTN"), true);
+  initial_rel_path.set(string("_MTN"), true);
 
   UNIT_TEST_CHECK_THROW(file_path_external(utf8("foo")), informative_failure);
   UNIT_TEST_CHECK_THROW(file_path_external(utf8(".")), informative_failure);
@@ -1078,7 +1133,7 @@ UNIT_TEST(paths, file_path_external_prefix__MTN)
 UNIT_TEST(paths, file_path_external_prefix_a_b)
 {
   initial_rel_path.unset();
-  initial_rel_path.set(fs::path("a/b"), true);
+  initial_rel_path.set(string("a/b"), true);
 
   char const * baddies[] = {"/foo",
                             "../../../bar",
@@ -1401,7 +1456,7 @@ UNIT_TEST(paths, system)
   working_root.unset();
   working_root.set(system_path("/working/root"), true);
   initial_rel_path.unset();
-  initial_rel_path.set(fs::path("rel/initial"), true);
+  initial_rel_path.set(string("rel/initial"), true);
 
   UNIT_TEST_CHECK(system_path(system_path("foo/bar")).as_internal() == "/a/b/foo/bar");
   UNIT_TEST_CHECK(!working_root.used);
@@ -1667,7 +1722,7 @@ UNIT_TEST(paths, test_internal_string_is_bookkeeping_path)
 UNIT_TEST(paths, test_external_string_is_bookkeeping_path_prefix_none)
 {
   initial_rel_path.unset();
-  initial_rel_path.set(fs::path(), true);
+  initial_rel_path.set(string(), true);
 
   char const * yes[] = {"_MTN",
                         "_MTN/foo",
@@ -1689,7 +1744,7 @@ UNIT_TEST(paths, test_external_string_is_bookkeeping_path_prefix_none)
 UNIT_TEST(paths, test_external_string_is_bookkeeping_path_prefix_a_b)
 {
   initial_rel_path.unset();
-  initial_rel_path.set(fs::path("a/b"), true);
+  initial_rel_path.set(string("a/b"), true);
 
   char const * yes[] = {"../../_MTN",
                         "../../_MTN/foo",
@@ -1713,7 +1768,7 @@ UNIT_TEST(paths, test_external_string_is_bookkeeping_path_prefix_a_b)
 UNIT_TEST(paths, test_external_string_is_bookkeeping_path_prefix__MTN)
 {
   initial_rel_path.unset();
-  initial_rel_path.set(fs::path("_MTN"), true);
+  initial_rel_path.set(string("_MTN"), true);
 
   char const * yes[] = {".",
                         "foo",
