@@ -318,7 +318,7 @@ private:
 extern bookkeeping_path const bookkeeping_root;
 extern path_component const bookkeeping_root_component;
 // for migration
-extern file_path const old_bookkeeping_root;
+extern path_component const old_bookkeeping_root_component;
 
 // this will always be an absolute path
 class system_path : public any_path
@@ -326,6 +326,7 @@ class system_path : public any_path
 public:
   system_path() {};
   system_path(system_path const & other) : any_path(other) {};
+
   // the optional argument takes some explanation.  this constructor takes a
   // path relative to the workspace root.  the question is how to interpret
   // that path -- since it's possible to have multiple workspaces over the
@@ -344,8 +345,12 @@ public:
   system_path(std::string const & path);
   system_path(utf8 const & path);
 
+  bool operator ==(const system_path & other) const
+  { return data == other.data; }
+
   system_path operator /(path_component const & to_append) const;
   system_path operator /(char const * to_append) const;
+  system_path dirname() const;
 
 private:
   system_path(std::string const & path,
